<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/datos_header">

        <EditTextPreference
            android:title="@string/correo_electronico"
            android:key="email"
            android:summary="@string/descripcion_correo_electronico"
            android:dialogTitle="@string/texto_cuadro_correo_electronico"
            />
        <ListPreference
            android:title="@string/sexo"
            android:key="sexo"
            android:summary="@string/descripcion_sexo"
            android:entries="@array/entradas_sexo"
            android:entryValues="@array/valores_sexo"
            />
        <MultiSelectListPreference
            android:title="@string/aficiones"
            android:key="aficiones"
            android:summary="@string/descripcion_aficiones"
            android:entries="@array/entradas_aficiones"
            android:entryValues="@array/valores_aficiones"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/opciones_header">

        <CheckBoxPreference
            android:title="@string/activar_sonido"
            android:key="sonido"
            android:summaryOn="@string/descripcion_activar_sonido_ON"
            android:summaryOff="@string/descripcion_activar_sonido_OFF"
            android:defaultValue="false"
            />
        <SwitchPreference
            android:title="@string/activar_notifaciones"
            android:key="notificaciones"
            android:summary="@string/descripcion_activar_notifaciones"
            />
    </PreferenceCategory>


</PreferenceScreen>